# recipe_book_app

./: .env  docker-compose.yml  main.py  pyproject.toml  test.html
DB/: __init__.py  databse_handler.py  db_script.groovy  neo4j_db_handler.py
UI/: __init__.py  ui_handler.py
UI/desktop/: MainWindow.py  WindowPattern.py  desktop_ui_handler.py  test.py
UI/web_ui/: Dockerfile  package-lock.json  package.json
UI/web_ui/src/: App.js
UI/web_ui/src/CSS/: add_recipe.css  main_page.css  page6_style.css  page_5.html  page_6.html  recipe.css  recipes.css
UI/web_ui/src/components/: AppRouter.js  Axios.js
UI/web_ui/src/pages/: add_recipe.js  found.js  front_auth.js  front_reg.js  main_page.js  recipe.js  recipe_list.jsx  search.js
UI/web_ui/src/pages/css/: page6_style.css
exceptions/: __init__.py
fastapi_app/: .env  Dockerfile  entrypoint.sh  main.py  pyproject.toml
fastapi_app/DB/: __init__.py  databse_handler.py  db_settings.py  neo4j_db_handler.py
fastapi_app/config/: db_settings.py
fastapi_app/exceptions/: __init__.py  db_exceptions.py
fastapi_app/recipe_book/: __init__.py  recipe.py
fastapi_app/routes/: constants.py  recipes_urls.py
