[tool.poetry]
name = "course_work"
version = "0.1.0"
description = ""
authors = ["mitrandir-pl <leshkopavel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.3.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
